# dehydrator

./: .gitmodules  CMakeLists.txt  README.md  dehydrator.c  sht3x_i2c.c
trial_analysis/: analysis.Rmd  aug7_rice.csv.xz  aug7_weights.csv
